fix color of collapse button

--- a/components/HackneyDS/Collapse/style.scss
+++ b/components/HackneyDS/Collapse/style.scss
@@ -6,6 +6,7 @@
   .collapse__button {
     display: flex;
     align-items: center;
+    color: $lbh-link;
 
     svg {
       margin-left: 5px;
